# FaceMeetingSystem

./: .gitignore
backend/: CMakeLists.txt  test_api.md
backend/database/: database_manager.cpp  database_manager.h  test_init_database.cpp
backend/include/: sqlite_modern_cpp.h
backend/src/: main.cpp
docs/: 系统设计与实现2.0.md
